--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "framework": "vite",
-  "installCommand": "npm install"
+  "outputDirectory": "dist"
 }
 
